# AutoMCP

./: .gitignore  pyproject.toml
config/: README.md  logging.py  settings.py
src/: main.py
src/agents/: README.md  classifier.py  code2mcp_executor.py  code_generator.py  executor.py  llm_responder.py  planner.py  reflection.py  router.py  web_executor.py
src/core/: app.py  mcp_server.py  models.py
src/integrations/: code2mcp_client.py  mcp_caller.py
src/memory/: rag_base.py  rag_local.py  rag_web.py
src/server/: app.py  models.py
src/tools/: __init__.py  loader.py  registry.py  web_mcp_service.py
src/tools/local/: __init__.py  code_tools.py  data_tools.py  file_tools.py  shell_tools.py  text_tools.py
src/tools/web/: repo_search.py
src/workflow/: config.py  graph.py  state.py
tests/: manual_test_flow.py  test_code2mcp_end_to_end.py  test_mcp_server.py  test_simple.py  test_web_mcp_service.py
